welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:37: error: ':' expected but ')' found.
def avance(n){
            ^MethodsPictureLarge:43: error: identifier expected but '}' found.
}
^